--- a/ios/PicChat/PicChat/PicChat-Info.plist
+++ b/ios/PicChat/PicChat/PicChat-Info.plist
@@ -35,11 +35,16 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>42</string>
+	<string>66</string>
 	<key>FacebookAppID</key>
 	<string>435929366454543</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>HelveticaNeueLTStd-Md.otf</string>
+		<string>HelveticaNeueLTStd-Bd.otf</string>
+	</array>
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
