--- a/ios/PicChat/PicChat/PicChat-Info.plist
+++ b/ios/PicChat/PicChat/PicChat-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>PicChatMe</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
@@ -48,7 +48,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>596</string>
+	<string>642</string>
 	<key>FacebookAppID</key>
 	<string>435929366454543</string>
 	<key>LSRequiresIPhoneOS</key>
