--- a/ios/PicChat/PicChat/Other Classes/Airship/AirshipConfig.plist
+++ b/ios/PicChat/PicChat/Other Classes/Airship/AirshipConfig.plist
@@ -1,7 +1,7 @@
 {
-	"APP_STORE_OR_AD_HOC_BUILD" = NO;
+	"APP_STORE_OR_AD_HOC_BUILD" = YES;
 	"DEVELOPMENT_APP_KEY" = "luPaeCF1Ry-H2Slh0Pef1w";
 	"DEVELOPMENT_APP_SECRET" = "6opdrvAUQbWFM0A5ksbnUw";
-	"PRODUCTION_APP_KEY" = "";
-	"PRODUCTION_APP_SECRET" = "";
+	"PRODUCTION_APP_KEY" = "FfJLfQz7R4CoAx9sLG8fCw";
+	"PRODUCTION_APP_SECRET" = "BeV2tol3Sy2qXz4nUuRHow";
 }
